--- a/framwork.css
+++ b/framwork.css
@@ -12,11 +12,39 @@
 }
 .col-4 {
   float: left;
-  width: 32.329999%;
+  width: 33.333333%;
 }
 .col-5 {
   float: left;
-  width: 40.66666%;
+  width: 41.66666%;
+}
+.col-6 {
+  float: left;
+  width: 50%;
+}
+.col-7 {
+  float: left;
+  width: 58.333333%;
+}
+.col-8 {
+  float: left;
+  width: 66.666666%;
+}
+.col-9 {
+  float: left;
+  width: 75%;
+}
+.col-10 {
+  float: left;
+  width: 83.3333%;
+}
+.col-11 {
+  float: left;
+  width: 91.66666%;
+}
+.col-12 {
+  float: left;
+  width: 100%;
 }
 div {
   height: 50px;
